# pushkind-approve

./: .coverage  .gitignore  .gitmodules  .pylintrc  AGENTS.md  Dockerfile  Makefile  README.md  approve.py  back.db  boot.sh  config.py  docker-compose.yml  icu.c  pushkind-approve.service  pyproject.toml  requirements.txt  run.py  settings.yaml  setup.py  sqlite_to_mysql.py  template.xlsx
.github/workflows/: deploy.yml  deploy_dev.yml  deploy_prod.yml  pytest.yml
app/: __init__.py  cli.py  ecwid.py  email.py  models.py  utils.py
app/api/: __init__.py  auth.py  errors.py  routes.py
app/auth/: email.py  forms.py  routes.py
app/errors/: handlers.py
app/main/: __init__.py  forms.py  routes.py  routes_admin.py  routes_approve.py  routes_buyer.py  routes_dashboard.py  routes_help.py  routes_history.py  routes_index.py  routes_limits.py  routes_products.py  routes_responsibility.py  routes_settings.py  routes_shop.py  routes_stores.py  utils.py
app/static/: .htaccess
app/templates/: _limit.html  _order.html  _order.status.html  _product.html  _store.html  _user.html  _user.popover.html  _user.settings.form.html  admin.html  approve.html  base.html  buyer.html  dashboard.html  help.html  history.html  index.html  limits.html  stores.html  (+8 more)
approve/: __init__.py  email.py  models.py  utils.py
c/: Dockerfile  Makefile  allheaders.h  dbg.h  ecwid-api.c  ecwid.c  ecwid.categories.c  ecwid.h  ecwid.orders.c  ecwid.products.c  ecwid.profiles.c  http.c  http.h  model.c  model.h  rest.c  rest.h  runtests.sh  test.sql  util.c  util.h
tests/: conftest.py  test_approve.py
(+162 files in other folders)
