[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Viacheslav Matrizaev <matrizaev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
Flask-HTTPAuth = "^4.7.0"
alembic = "^1.9.3"
gevent = "^22.10.2"
certifi = "^2022.12.7"
chardet = "^5.1.0"
click = "^8.1.3"
dateparser = "^1.1.7"
dnspython = "^2.3.0"
email-validator = "^1.3.1"
Flask-Login = "^0.6.2"
Flask-Mail = "^0.9.1"
Flask-Migrate = "^4.0.4"
Flask-Moment = "^1.0.5"
Flask-SQLAlchemy = "^3.0.3"
Flask-WTF = "^1.1.1"
idna = "^3.4"
Jinja2 = "^3.1.2"
Mako = "^1.2.4"
MarkupSafe = "^2.1.2"
moment = "^0.12.1"
PyJWT = "^2.6.0"
python-dateutil = "^2.8.2"
python-dotenv = "^0.21.1"
pytz = "^2022.7.1"
SQLAlchemy = "^2.0.2"
times = "^0.7"
tzlocal = "^4.2"
urllib3 = "^1.26.14"
Werkzeug = "^2.2.2"
WTForms = "^3.0.1"
pandas = "^1.5.3"
mysql-connector-python = "^8.0.32"
mysqlclient = "^2.1.1"
celery = "^5.2.7"
openpyxl = "~3.0.10"
pytest = "^7.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
